<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="sample.activities.MainActivity">

    <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fontFamily="@font/roboto_mono" android:textSize="24sp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/etUserName"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Test Name"
    />
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="User Name"
            android:ems="10"
            android:fontFamily="@font/roboto_mono"
            android:id="@+id/etUserName"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/fabGo"
            android:layout_marginRight="16dp"
            />


    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/rvForecast"
            app:layout_constraintTop_toBottomOf="@+id/tvName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@drawable/ic_arrow_forward_black_24dp"
            android:id="@+id/fabGo"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintTop_toTopOf="@+id/etUserName"
            app:layout_constraintBottom_toBottomOf="@+id/etUserName"/>





    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:id="@+id/pb" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/etUserName"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>